Bug fixes with placing orders

--- a/src/main/resources/com/dagobert_engine/example.properties
+++ b/src/main/resources/com/dagobert_engine/example.properties
@@ -1,6 +1,6 @@
 DEFAULT_CURRENCY=USD
 DEFAULT_PERIOD_LENGTH=60000
-DEFAULT_TRADE_AMOUNT=0.01
+MIN_TRADE_AMOUNT=0.01
 UPDATE_TIME=5
 MTGOX_PUBLIC_KEY=
 MTGOX_PRIVATE_KEY=
